tests/rosetta/out/Pascal/arbitrary-precision-integers-included-.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/arbitrary-precision-integers-included-.pas
arbitrary-precision-integers-included-.pas(39,8) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(40,9) Note: Call to subroutine "operator >(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(40,12) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(42,8) Note: Call to subroutine "operator =(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(42,17) Note: Call to subroutine "operator mod(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(42,11) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(42,17) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(44,24) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(44,23) Note: Call to subroutine "operator :=(const source:Variant):Extended;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(44,23) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(44,18) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
arbitrary-precision-integers-included-.pas(50,30) Error: Identifier not found "bigint"
arbitrary-precision-integers-included-.pas(50,53) Error: Identifier not found "bigint"
arbitrary-precision-integers-included-.pas(73,20) Error: Incompatible type for arg no. 1: Got "LongInt", expected "<erroneous type>"
arbitrary-precision-integers-included-.pas(77) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
