tests/rosetta/out/Pascal/arbitrary-precision-integers-included-.pas
// Generated by Mochi compiler v0.10.30 on 1970-01-01T00:00:00Z
program ArbitraryPrecisionIntegersIncluded;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, Classes, Variants;

type
  generic TArray<T> = array of T;
function _sliceString(s: string; i, j: integer): string;
var start_, end_, n: integer;
begin
  start_ := i;
  end_ := j;
  n := Length(s);
  if start_ < 0 then start_ := n + start_;
  if end_ < 0 then end_ := n + end_;
  if start_ < 0 then start_ := 0;
  if end_ > n then end_ := n;
  if end_ < start_ then end_ := start_;
  Result := Copy(s, start_ + 1, end_ - start_);
end;


var
  base: integer;
  e1: Variant;
  e2: Variant;
  s: string;
  x: Variant;

function pow_int(base: integer; exp: integer): integer;
var
  b: integer;
  e: Variant;
  _result: integer;
begin
  _result := 1;
  b := base;
  e := exp;
  while (e > 0) do
  begin
    if (e mod 2 = 1) then ;
    b := b * b;
    e := Trunc(e div 2);
  end;
  result := _result;
  exit;
end;

function pow_big(base: bigint; exp: integer): bigint;
var
  b: integer;
  e: Variant;
  _result: integer;
begin
  _result := 1;
  b := base;
  e := exp;
  while (e > 0) do
  begin
    if (e mod 2 = 1) then ;
    b := b * b;
    e := Trunc(e div 2);
  end;
  result := _result;
  exit;
end;

begin
  e1 := pow_int(3, 2);
  e2 := pow_int(4, e1);
  base := 5;
  x := pow_big(base, e2);
  s := IntToStr(x);
  writeln('5^(4^(3^2)) has', ' ', Length(s), ' ', 'digits:', ' ', _sliceString(s, 0, 0 + 20), ' ', '...', ' ', _sliceString(s, Length(s) - 20, Length(s) - 20 + Length(s)));
end.
